--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 # Keep the connection alive if idle for a long time (needed in production)
 spring:
   profiles:
-    active: dev
+    active: prod
 
 status:
   toinitialize: true
